fix: more readable hints

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 16px;
+  font-size: 62.5%;
 }
 html, body {
   margin: 0;
@@ -56,7 +56,7 @@ button {
   display: inline;
 }
 #game .hint {
-  font-size: 16px;
+  font-size: 3rem;
   color: #aaa;
   position: relative;
   top: 10px;
